# ParallelComputing

Labs/: CMakeLists.txt  main.cpp
